Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:19
 #, no-wrap
 msgid "What is RESTEasy Reactive?"
-msgstr ""
+msgstr "RESTEasy Reactiveとは？"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:25
@@ -50,7 +50,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:30
 #, no-wrap
 msgid "Writing endpoints"
-msgstr ""
+msgstr "エンドポイントの作成"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:32
@@ -147,7 +147,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:63
 #, no-wrap
 msgid "Terminology"
-msgstr ""
+msgstr "用語解説"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:65
@@ -158,13 +158,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:66
 msgid "https://en.wikipedia.org/wiki/Representational_state_transfer[REpresentational State Transfer]"
-msgstr ""
+msgstr "https://en.wikipedia.org/wiki/Representational_state_transfer[REpresentational State Transfer]"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:66
 #, no-wrap
 msgid "Endpoint"
-msgstr ""
+msgstr "エンドポイント"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:67
@@ -175,7 +175,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:67
 #, no-wrap
 msgid "URL / URI (Uniform Resource Locator / Identifier)"
-msgstr ""
+msgstr "URL / URI (Uniform Resource Locator / Identifier)"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:68
@@ -197,18 +197,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:69
 #, no-wrap
 msgid "Representation"
-msgstr ""
+msgstr "表現"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:70
 msgid "How your resource is represented on the wire, can vary depending on content types"
-msgstr ""
+msgstr "通信上でのリソースの表現方法は、Content typeによって異なります。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:70
 #, no-wrap
 msgid "Content type"
-msgstr ""
+msgstr "Content type"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:71
@@ -2592,7 +2592,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:1366
 #, no-wrap
 msgid "Parameter mapping"
-msgstr ""
+msgstr "パラメータマッピング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:1370
@@ -2961,7 +2961,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:1596
 #, no-wrap
 msgid "Negotiation"
-msgstr ""
+msgstr "ネゴシエーション"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:1603
