--- a/l10n/po/ja_JP/_versions/2.2/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/resteasy-reactive.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:21
 #, no-wrap
 msgid "What is RESTEasy Reactive?"
-msgstr ""
+msgstr "RESTEasy Reactiveとは？"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:27
@@ -50,7 +50,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:32
 #, no-wrap
 msgid "Writing endpoints"
-msgstr ""
+msgstr "エンドポイントの作成"
 
 #. type: Title ===
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:34
@@ -147,7 +147,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:65
 #, no-wrap
 msgid "Terminology"
-msgstr ""
+msgstr "用語解説"
 
 #. type: Labeled list
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:67
@@ -158,13 +158,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:68
 msgid "https://en.wikipedia.org/wiki/Representational_state_transfer[REpresentational State Transfer]"
-msgstr ""
+msgstr "https://en.wikipedia.org/wiki/Representational_state_transfer[REpresentational State Transfer]"
 
 #. type: Labeled list
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:68
 #, no-wrap
 msgid "Endpoint"
-msgstr ""
+msgstr "エンドポイント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:69
@@ -175,7 +175,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:69
 #, no-wrap
 msgid "URL / URI (Uniform Resource Locator / Identifier)"
-msgstr ""
+msgstr "URL / URI (Uniform Resource Locator / Identifier)"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:70
@@ -197,18 +197,18 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:71
 #, no-wrap
 msgid "Representation"
-msgstr ""
+msgstr "表現"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:72
 msgid "How your resource is represented on the wire, can vary depending on content types"
-msgstr ""
+msgstr "通信上でのリソースの表現方法は、Content typeによって異なります。"
 
 #. type: Labeled list
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:72
 #, no-wrap
 msgid "Content type"
-msgstr ""
+msgstr "Content type"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:73
@@ -2031,22 +2031,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:971
 msgid "`io.smallrye.mutiny.Uni`"
-msgstr ""
+msgstr "`io.smallrye.mutiny.Uni`"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:972
 msgid "`io.smallrye.mutiny.Multi`"
-msgstr ""
+msgstr "`io.smallrye.mutiny.Multi`"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:973
 msgid "`java.util.concurrent.CompletionStage`"
-msgstr ""
+msgstr "`java.util.concurrent.CompletionStage`"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:974
 msgid "`org.reactivestreams.Publisher`"
-msgstr ""
+msgstr "`org.reactivestreams.Publisher`"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:975
@@ -2930,7 +2930,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1544
 #, no-wrap
 msgid "Parameter mapping"
-msgstr ""
+msgstr "パラメータマッピング"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1548
@@ -3299,7 +3299,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1774
 #, no-wrap
 msgid "Negotiation"
-msgstr ""
+msgstr "ネゴシエーション"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1781
@@ -3539,12 +3539,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1924
 msgid "In addition to the Server side, RESTEasy Reactive comes with a new MicroProfile Rest Client implementation that is non-blocking at its core."
-msgstr ""
+msgstr "RESTEasy Reactiveには、サーバー側に加えて、ノンブロッキングを核とした新しいMicroProfile Rest Clientの実装が搭載されています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1926
 msgid "Please note that the `quarkus-rest-client` extension may not work properly with RESTEasy Reactive."
-msgstr ""
+msgstr "なお、RESTEasy Reactiveでは、 `quarkus-rest-client` エクステンションが正常に動作しない場合があります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/resteasy-reactive.adoc:1927
