--- a/l10n/po/ja_JP/_versions/main/guides/jreleaser.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/jreleaser.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:17
 msgid "This guide covers packaging and releasing CLI applications using the link:https://jreleaser.org[JReleaser] tool."
-msgstr ""
+msgstr "このガイドでは、 link:https://jreleaser.org[JReleaser]ツールを使ったCLIアプリケーションのパッケージングとリリースについて説明します。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/jreleaser.adoc:18
@@ -39,7 +39,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:22
 msgid "a GitHub account and a GitHub Personal Access token"
-msgstr ""
+msgstr "GitHubアカウントとGitHubパーソナルアクセストークン"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/jreleaser.adoc:23
@@ -50,12 +50,12 @@ msgstr "プロジェクトのブートストラップ"
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:27
 msgid "First, we need a project that defines a CLI application. We recommend using the xref:picocli.adoc[PicoCLI] extension.  This can be done using the following command:"
-msgstr ""
+msgstr "まず，CLIアプリケーションを定義したプロジェクトが必要です。 link:picocli.html[PicoCLI]エクステンションの使用をお勧めします。これは以下のコマンドで行うことができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:33
 msgid "This command initializes the file structure and the minimum set of required files in the project:"
-msgstr ""
+msgstr "このコマンドは、プロジェクトのファイル構造と最低限必要なファイルのセットを初期化します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:53
@@ -83,7 +83,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:56
 msgid "It will also configure the picocli extension in the `pom.xml`:"
-msgstr ""
+msgstr "また、このコマンドは `pom.xml` にpicocli エクステンションを設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:63
@@ -104,7 +104,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:70
 msgid "The project must be hosted at a GitHub repository before we continue. This task can be completed by logging into your GitHub account, creating a new repository, and adding the newly created sources to said repository. Choose the `main` branch as default to take advantage of conventions and thus configure less in your `pom.xml`."
-msgstr ""
+msgstr "この作業を続ける前に、プロジェクトをGitHubリポジトリでホストする必要があります。この作業は、GitHub アカウントにログインし、新しいリポジトリを作成して、新しく作成したソースをそのリポジトリに追加することで完了します。 `main` ブランチをデフォルトとして選択すると、規約を利用して `pom.xml` で設定を少なくすることが可能です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:78
@@ -115,7 +115,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:80
 #, no-wrap
 msgid "~/.jreleaser/config.yml"
-msgstr ""
+msgstr "~/.jreleaser/config.yml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:83
@@ -132,7 +132,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:90
 #, no-wrap
 msgid "Packaging as a Native Image distribution"
-msgstr ""
+msgstr "ネイティブイメージでの配布"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:95
@@ -159,7 +159,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:108
 #, no-wrap
 msgid "Creating the distribution"
-msgstr ""
+msgstr "ディストリビューションの作成"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:113
@@ -261,7 +261,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:199
 #, no-wrap
 msgid "src/main/assembly/assembly.xml"
-msgstr ""
+msgstr "src/main/assembly/assembly.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:219
@@ -290,7 +290,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:222
 msgid "These are the files created by the assembly plugin when invoking `./mvnw -Pdist package` on macOS:"
-msgstr ""
+msgstr "これらのファイルは、macOS上で `./mvnw -Pdist package` を起動したときに、assembly プラグインによって作成されるファイルです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:233
@@ -314,7 +314,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:239
 msgid "We're ready to go to the next phase: configuring the release."
-msgstr ""
+msgstr "これで、次の段階であるリリースの設定に進むことができます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/jreleaser.adoc:240
@@ -355,7 +355,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:299
 #, no-wrap
 msgid "target/jreleaser/release/CHANGELOG.md"
-msgstr ""
+msgstr "target/jreleaser/release/CHANGELOG.md"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:271
@@ -398,7 +398,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:297
 msgid "Run the previous Maven command once again and inspect the generated changelog, it should now look like this:"
-msgstr ""
+msgstr "前述のMavenコマンドをもう一度実行し、生成されたチェンジログを確認してください、以下のようになるはずです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:306
@@ -427,7 +427,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:317
 #, no-wrap
 msgid "Adding distributions to the release"
-msgstr ""
+msgstr "リリースへのディストリビューションの追加"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:325
@@ -612,7 +612,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:480
 #, no-wrap
 msgid "Creating a release"
-msgstr ""
+msgstr "リリースの作成"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:487
@@ -673,27 +673,27 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:533
 msgid "JReleaser will perform the following tasks for us:"
-msgstr ""
+msgstr "JReleaserが以下の作業を代行します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:535
 msgid "Generate a changelog based on all commits from the last tag (if any) to the latest commit."
-msgstr ""
+msgstr "最後のタグ（もしあれば）から最新のコミットまでのすべてのコミットを基にして、チェンジログを生成します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:536
 msgid "Calculate SHA256 (default) checksums for all input files."
-msgstr ""
+msgstr "すべての入力ファイルに対してSHA256（デフォルト）のチェックサムを計算します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:537
 msgid "Sign all files with GPG. In our case we did not configure this step thus it's skipped."
-msgstr ""
+msgstr "すべてのファイルにGPGで署名します。ここでは、このステップを設定していないので、スキップされます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:538
 msgid "Upload assets to JFrog Artifactory or AWS S3. We also skip this step as it's not configured."
-msgstr ""
+msgstr "JFrog ArtifactoryまたはAWS S3にアセットをアップロードします。このステップは設定しないのでこれも省略します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:539
@@ -703,7 +703,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:540
 msgid "Upload all assets, including checksums."
-msgstr ""
+msgstr "チェックサムを含むすべてのアセットをアップロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:541
@@ -775,12 +775,12 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:577
 #, no-wrap
 msgid "Reference"
-msgstr ""
+msgstr "参考"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:580
 msgid "As a reference, these are the full contents of the `pom.xml`:"
-msgstr ""
+msgstr "参考までに、 `pom.xml` の全内容は以下の通りです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:824
