--- a/l10n/po/ja_JP/_versions/main/guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/lifecycle.adoc.po
@@ -463,12 +463,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/lifecycle.adoc:222
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/lifecycle.adoc:226
 msgid "and executed using `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "そして次のコマンドで実行できます。 `java -jar target/quarkus-app/quarkus-run.jar`."
 
 #. type: Plain text
 #: upstream/_versions/main/guides/lifecycle.adoc:228
