--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:21
 #, no-wrap
 msgid "What is RESTEasy Reactive?"
-msgstr ""
+msgstr "RESTEasy Reactiveとは？"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:27
@@ -50,7 +50,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:32
 #, no-wrap
 msgid "Writing endpoints"
-msgstr ""
+msgstr "エンドポイントの作成"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:34
@@ -153,7 +153,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:65
 #, no-wrap
 msgid "Terminology"
-msgstr ""
+msgstr "用語解説"
 
 #. type: Labeled list
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:67
@@ -164,13 +164,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:68
 msgid "https://en.wikipedia.org/wiki/Representational_state_transfer[REpresentational State Transfer]"
-msgstr ""
+msgstr "https://en.wikipedia.org/wiki/Representational_state_transfer[REpresentational State Transfer]"
 
 #. type: Labeled list
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:68
 #, no-wrap
 msgid "Endpoint"
-msgstr ""
+msgstr "エンドポイント"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:69
@@ -181,7 +181,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:69
 #, no-wrap
 msgid "URL / URI (Uniform Resource Locator / Identifier)"
-msgstr ""
+msgstr "URL / URI (Uniform Resource Locator / Identifier)"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:70
@@ -203,18 +203,18 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:71
 #, no-wrap
 msgid "Representation"
-msgstr ""
+msgstr "表現"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:72
 msgid "How your resource is represented on the wire, can vary depending on content types"
-msgstr ""
+msgstr "通信上でのリソースの表現方法は、Content typeによって異なります。"
 
 #. type: Labeled list
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:72
 #, no-wrap
 msgid "Content type"
-msgstr ""
+msgstr "Content type"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:73
@@ -2324,22 +2324,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1151
 msgid "`io.smallrye.mutiny.Uni`"
-msgstr ""
+msgstr "`io.smallrye.mutiny.Uni`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1152
 msgid "`io.smallrye.mutiny.Multi`"
-msgstr ""
+msgstr "`io.smallrye.mutiny.Multi`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1153
 msgid "`java.util.concurrent.CompletionStage`"
-msgstr ""
+msgstr "`java.util.concurrent.CompletionStage`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1154
 msgid "`org.reactivestreams.Publisher`"
-msgstr ""
+msgstr "`org.reactivestreams.Publisher`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1155
@@ -3229,7 +3229,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1724
 #, no-wrap
 msgid "Parameter mapping"
-msgstr ""
+msgstr "パラメータマッピング"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1728
@@ -3609,7 +3609,7 @@ msgstr ""
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1959
 #, no-wrap
 msgid "Negotiation"
-msgstr ""
+msgstr "ネゴシエーション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1966
@@ -3849,14 +3849,14 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:2109
 msgid "In addition to the Server side, RESTEasy Reactive comes with a new MicroProfile Rest Client implementation that is non-blocking at its core."
-msgstr ""
+msgstr "RESTEasy Reactiveには、サーバー側に加えて、ノンブロッキングを核とした新しいMicroProfile Rest Clientの実装が搭載されています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:2111
 msgid "Please note that the `quarkus-rest-client` extension may not work properly with RESTEasy Reactive."
-msgstr ""
+msgstr "なお、RESTEasy Reactiveでは、 `quarkus-rest-client` エクステンションが正常に動作しない場合があります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:2112
 msgid "See xref:rest-client-reactive.adoc[REST Client Reactive Guide] for more information about the reactive client."
-msgstr ""
+msgstr "リアクティブ・クライアントの詳細については、link:rest-client-reactive.html[REST Client Reactiveガイド] を参照してください。"
